--- a/research/experiments.ipynb
+++ b/research/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
        " Document(page_content='ORGANIZATIONS\\nAmerican Lung Association. 1740 Broadway, New York, NY\\n10019. (800) 586-4872. <http://www.lungusa.org>.\\nCenters for Disease Control and Prevention. 1600 Clifton Rd.,\\nNE, Atlanta, GA 30333. (800) 311-3435, (404) 639-3311.<http://www.cdc.gov>.\\nOTHER\\n“Occupational Lung Disease.” American Lung Association\\nPage .27 May 1998 <http://www.lungusa.org>.\\n“1996 World Surveillance Report: Selected Data Highlights.”\\nCenters for Disease Control .27 May 1998. 27 May 1998\\n<http://www.cdc.gov/niosh/w7_high.html>.\\nMaureen Haggerty\\nGALE ENCYCLOPEDIA OF MEDICINE 2 623ByssinosisGEM -0433 to 0624 - B  10/22/03 6:09 PM  Page 623', metadata={'source': 'C:\\\\Project\\\\Medical_chatbot_AI\\\\Medical_ChatBot\\\\Data\\\\Medical_book.pdf', 'page': 636})]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -745,12 +745,12 @@
    ],
    "source": [
     "text_chunks = text_split(extracted_data)\n",
-    "print(\"length of my chunk:\", len(text_chunks) )"
+    "print(\"length of my chunk:\", len(text_chunks))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1759,7 @@
        " ...]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1770,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1783,37 +1783,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".gitattributes: 100%|██████████| 1.18k/1.18k [00:00<00:00, 1.18MB/s]\n",
-      "1_Pooling/config.json: 100%|██████████| 190/190 [00:00<?, ?B/s] \n",
-      "README.md: 100%|██████████| 10.6k/10.6k [00:00<00:00, 1.33MB/s]\n",
-      "config.json: 100%|██████████| 612/612 [00:00<?, ?B/s] \n",
-      "config_sentence_transformers.json: 100%|██████████| 116/116 [00:00<00:00, 81.5kB/s]\n",
-      "data_config.json: 100%|██████████| 39.3k/39.3k [00:00<00:00, 188kB/s]\n",
-      "pytorch_model.bin: 100%|██████████| 90.9M/90.9M [00:43<00:00, 2.11MB/s]\n",
-      "sentence_bert_config.json: 100%|██████████| 53.0/53.0 [00:00<00:00, 25.7kB/s]\n",
-      "special_tokens_map.json: 100%|██████████| 112/112 [00:00<00:00, 549kB/s]\n",
-      "tokenizer.json: 100%|██████████| 466k/466k [00:00<00:00, 1.04MB/s]\n",
-      "tokenizer_config.json: 100%|██████████| 350/350 [00:00<?, ?B/s] \n",
-      "train_script.py: 100%|██████████| 13.2k/13.2k [00:00<00:00, 5.78MB/s]\n",
-      "vocab.txt: 100%|██████████| 232k/232k [00:00<00:00, 15.1MB/s]\n",
-      "modules.json: 100%|██████████| 349/349 [00:00<00:00, 175kB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "embeddings = download_embedding()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1805,7 @@
        "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2226,7 @@
        " 0.005034865811467171]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2258,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2274,14 +2253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result [Document(page_content=\"GALE ENCYCLOPEDIA OF MEDICINE 2 117Allergies\\nAllergic rhinitis is commonly triggered by\\nexposure to household dust, animal fur,or pollen. The foreign substance thattriggers an allergic reaction is calledan allergen.\\nThe presence of an allergen causes the\\nbody's lymphocytes to begin producingIgE antibodies. The lymphocytes of an allergy sufferer produce an unusuallylarge amount of IgE.\\nIgE molecules attach to mast\\ncells, which contain histamine.HistaminePollen grains\\nLymphocyte\\nFIRST EXPOSURE\", metadata={}), Document(page_content='allergens are the following:\\n• plant pollens\\n• animal fur and dander\\n• body parts from house mites (microscopic creatures\\nfound in all houses)\\n• house dust• mold spores• cigarette smoke• solvents• cleaners\\nCommon food allergens include the following:\\n• nuts, especially peanuts, walnuts, and brazil nuts\\n• fish, mollusks, and shellfish• eggs• wheat• milk• food additives and preservatives\\nThe following types of drugs commonly cause aller-\\ngic reactions:\\n• penicillin or other antibiotics', metadata={}), Document(page_content='itchy, scratchy nose, eyes, and throat common in aller-gic rhinitis.\\nThe number of possible airborne allergens is enor-', metadata={})]\n"
+      "Result [Document(page_content=\"GALE ENCYCLOPEDIA OF MEDICINE 2 117Allergies\\nAllergic rhinitis is commonly triggered by\\nexposure to household dust, animal fur,or pollen. The foreign substance thattriggers an allergic reaction is calledan allergen.\\nThe presence of an allergen causes the\\nbody's lymphocytes to begin producingIgE antibodies. The lymphocytes of an allergy sufferer produce an unusuallylarge amount of IgE.\\nIgE molecules attach to mast\\ncells, which contain histamine.HistaminePollen grains\\nLymphocyte\\nFIRST EXPOSURE\", metadata={}), Document(page_content=\"GALE ENCYCLOPEDIA OF MEDICINE 2 117Allergies\\nAllergic rhinitis is commonly triggered by\\nexposure to household dust, animal fur,or pollen. The foreign substance thattriggers an allergic reaction is calledan allergen.\\nThe presence of an allergen causes the\\nbody's lymphocytes to begin producingIgE antibodies. The lymphocytes of an allergy sufferer produce an unusuallylarge amount of IgE.\\nIgE molecules attach to mast\\ncells, which contain histamine.HistaminePollen grains\\nLymphocyte\\nFIRST EXPOSURE\", metadata={}), Document(page_content='allergens are the following:\\n• plant pollens\\n• animal fur and dander\\n• body parts from house mites (microscopic creatures\\nfound in all houses)\\n• house dust• mold spores• cigarette smoke• solvents• cleaners\\nCommon food allergens include the following:\\n• nuts, especially peanuts, walnuts, and brazil nuts\\n• fish, mollusks, and shellfish• eggs• wheat• milk• food additives and preservatives\\nThe following types of drugs commonly cause aller-\\ngic reactions:\\n• penicillin or other antibiotics', metadata={})]\n"
      ]
     }
    ],
@@ -2298,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2307,7 +2286,7 @@
        "\"GALE ENCYCLOPEDIA OF MEDICINE 2 117Allergies\\nAllergic rhinitis is commonly triggered by\\nexposure to household dust, animal fur,or pollen. The foreign substance thattriggers an allergic reaction is calledan allergen.\\nThe presence of an allergen causes the\\nbody's lymphocytes to begin producingIgE antibodies. The lymphocytes of an allergy sufferer produce an unusuallylarge amount of IgE.\\nIgE molecules attach to mast\\ncells, which contain histamine.HistaminePollen grains\\nLymphocyte\\nFIRST EXPOSURE\""
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2335,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2356,31 +2335,11 @@
       "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\project\\medical_chatbot_ai\\medical_chatbot\\chatbot\\lib\\site-packages (from requests->huggingface_hub) (2.1.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\project\\medical_chatbot_ai\\medical_chatbot\\chatbot\\lib\\site-packages (from requests->huggingface_hub) (2023.11.17)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Collecting llama-cpp-python\n",
-      "  Using cached llama_cpp_python-0.2.27.tar.gz (9.4 MB)\n",
-      "  Installing build dependencies: started\n",
-      "  Installing build dependencies: finished with status 'done'\n",
-      "  Getting requirements to build wheel: started\n",
-      "  Getting requirements to build wheel: finished with status 'done'\n",
-      "  Installing backend dependencies: started\n",
-      "  Installing backend dependencies: finished with status 'done'\n",
-      "  Preparing metadata (pyproject.toml): started\n",
-      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Requirement already satisfied: llama-cpp-python in c:\\project\\medical_chatbot_ai\\medical_chatbot\\chatbot\\lib\\site-packages (0.1.78)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
       "Requirement already satisfied: typing-extensions>=4.5.0 in c:\\project\\medical_chatbot_ai\\medical_chatbot\\chatbot\\lib\\site-packages (from llama-cpp-python) (4.9.0)\n",
       "Requirement already satisfied: numpy>=1.20.0 in c:\\project\\medical_chatbot_ai\\medical_chatbot\\chatbot\\lib\\site-packages (from llama-cpp-python) (1.23.4)\n",
-      "Collecting diskcache>=5.6.1 (from llama-cpp-python)\n",
-      "  Using cached diskcache-5.6.3-py3-none-any.whl.metadata (20 kB)\n",
-      "Using cached diskcache-5.6.3-py3-none-any.whl (45 kB)\n",
-      "Building wheels for collected packages: llama-cpp-python\n",
-      "  Building wheel for llama-cpp-python (pyproject.toml): started\n",
-      "  Building wheel for llama-cpp-python (pyproject.toml): still running...\n",
-      "  Building wheel for llama-cpp-python (pyproject.toml): finished with status 'done'\n",
-      "  Created wheel for llama-cpp-python: filename=llama_cpp_python-0.2.27-cp310-cp310-win_amd64.whl size=1892606 sha256=cec2299d4d2cee366a642e8f0dd3e81bb14ff2955ecbbaa6a8c50713a426d448\n",
-      "  Stored in directory: c:\\users\\avina\\appdata\\local\\pip\\cache\\wheels\\8c\\92\\37\\ada3fcfdf537bab790219920443164923e6cbfcbd80174af23\n",
-      "Successfully built llama-cpp-python\n",
-      "Installing collected packages: diskcache, llama-cpp-python\n",
-      "Successfully installed diskcache-5.6.3 llama-cpp-python-0.2.27\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: diskcache>=5.6.1 in c:\\project\\medical_chatbot_ai\\medical_chatbot\\chatbot\\lib\\site-packages (from llama-cpp-python) (5.6.3)\n",
       "Requirement already satisfied: numpy==1.23.4 in c:\\project\\medical_chatbot_ai\\medical_chatbot\\chatbot\\lib\\site-packages (1.23.4)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -2398,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2408,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2418,27 +2377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "llama-2-13b-chat.ggmlv3.q5_1.bin: 100%|██████████| 9.76G/9.76G [1:09:27<00:00, 2.34MB/s]\n",
-      "c:\\Project\\Medical_chatbot_AI\\Medical_ChatBot\\chatbot\\lib\\site-packages\\huggingface_hub\\file_download.py:149: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\avina\\.cache\\huggingface\\hub\\models--TheBloke--Llama-2-13B-chat-GGML. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_path = hf_hub_download(repo_id=model_name, filename=model_basename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2447,7 +2395,7 @@
        "'C:\\\\Users\\\\avina\\\\.cache\\\\huggingface\\\\hub\\\\models--TheBloke--Llama-2-13B-chat-GGML\\\\snapshots\\\\3140827b4dfcb6b562cd87ee3d7f07109b014dd0\\\\llama-2-13b-chat.ggmlv3.q5_1.bin'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
